improve file path descriptions

--- a/web/index.html
+++ b/web/index.html
@@ -117,7 +117,7 @@
               <h4>Paths</h4>
               <small class="hint">Filesystem locations used by the conversion (root, raw data and outputs).</small>
               <div class="form-group">
-                <label>Root Path</label>
+                <label>Root Path <small style="color: var(--muted); font-weight:400">Absolute path or '~/'</small> </label>
                 <div style="display:flex; gap:8px;"><input id="config_root_path" class="input-wide-compact"></div>
               </div>
               <div class="form-group">
