feat: Restructuring of BIDS conversion pipeline and supporting modules, mainly splitting steps improve overview and debugging. Conversion table issues should now be fixed.
- Implemented bidsify_parsing.py for extracting metadata from MEG filenames.
- Created bidsify_pipeline.py to manage the BIDS conversion process, including logging and error handling.
- Developed bidsify_sidecars.py to update BIDS sidecar JSON files with metadata.
- Added bidsify_templates.py for creating dataset_description.json and participants files.
- Introduced bidsify_utils.py for utility functions such as logging path setup and configuration parameter extraction.
- Enhanced error handling and logging throughout the pipeline for improved traceability.
- Integrated support for handling split files and various data types (MEG, EEG).
- Established a framework for generating and updating BIDS reports.

--- a/web/index.html
+++ b/web/index.html
@@ -250,6 +250,7 @@
                 <option value="check">check</option>
                 <option value="processed">processed</option>
                 <option value="skip">skip</option>
+                <option value="missing">missing</option>
               </select>
               <button id="applyBatchStatusBtn" class="btn" disabled>Apply to Selected</button>
             </div>
@@ -263,6 +264,7 @@
                 <option value="run">run</option>
                 <option value="processed">processed</option>
                 <option value="skip">skip</option>
+                <option value="missing">missing</option>
               </select>
               <select id="subjectFilterSelect" class="input-sm" aria-label="Filter subjects" style="min-width:120px;">
                 <option value="">All Subjects</option>
