--- a/web/index.html
+++ b/web/index.html
@@ -251,6 +251,7 @@
                 <option value="processed">processed</option>
                 <option value="skip">skip</option>
                 <option value="missing">missing</option>
+                <option value="error">error</option>
               </select>
               <button id="applyBatchStatusBtn" class="btn" disabled>Apply to Selected</button>
             </div>
@@ -265,6 +266,7 @@
                 <option value="processed">processed</option>
                 <option value="skip">skip</option>
                 <option value="missing">missing</option>
+                <option value="error">error</option>
               </select>
               <select id="subjectFilterSelect" class="input-sm" aria-label="Filter subjects" style="min-width:120px;">
                 <option value="">All Subjects</option>
